update crashlytics and fix fastlane

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,11 +11,11 @@ before_script:
   - export ANDROID_SDK_ROOT=/Users/macmini1/Library/Android/sdk
 
 
-example:
+beta:
   dependencies: []
-  stage: beta
+  stage: example
   script:
-    - bundle exec fastlane beta
+    - bundle exec fastlane example
   tags:
     - android
   only:
