Update fastlane. Try Another gitlab-runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,10 @@ variables:
   LANG: "fr_FR.UTF-8"
 
 before_script:
-  - bundle install --path vendor/bundle  
-  - export JAVA_HOME= \Program Files\Java\jdk-11
-  - export ANDROID_SDK_ROOT=\Users\Vincent\AppData\Local\Android\Sdk
+  - bundle install --path vendor/bundle    
+  - export JAVA_HOME=/Users/vincent/Library/Java/JavaVirtualMachines/jbr-17.0.6/Contents/Home
+  - export ANDROID_SDK_ROOT=/Users/vincent/Library/Android/sdk
+
 
 
 
@@ -18,7 +19,7 @@ beta:
   script:
     - bundle exec fastlane example
   tags:
-    - android
+    - android-mac
   only:
     - main
 
