--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
         multiDexEnabled true
     }
 
+    sourceSets {
+        androidTest { java.srcDirs = ['src/androidTest/java'] }
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
@@ -71,9 +74,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'junit:junit:4.+'
 
     def room_version = "2.4.3"
     def retrofit_version = "2.9.0"
@@ -83,6 +84,8 @@ dependencies {
     def glide_version = "2.2.2"
     def compose_version = "1.4.0-beta02"
 
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4:$compose_version")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_version")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
