update image and newsWidget font

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,15 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11
     }
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
 
+        debug{
+            minifyEnabled false
+        }
+    }
 
     flavorDimensions "version"
     productFlavors {
