--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - example
 
 variables:
   LC_ALL: "fr_FR.UTF-8"
@@ -18,6 +19,6 @@ beta:
   tags:
     - android-mac
   only:
-    - main
+    - master
 
 
