--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,10 +90,12 @@ dependencies {
     def okHttp = "4.10.0"
     def accompanist_version = "0.30.1"
     def glide_version = "2.2.2"
-    def compose_version = "1.4.0-beta02"
+    def compose_version = "1.4.0-beta01"
+    def nav_version = "2.5.3"
 
     androidTestImplementation("androidx.compose.ui:ui-test-junit4:$compose_version")
     debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_version")
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -133,7 +135,8 @@ dependencies {
     implementation("com.airbnb.android:lottie-compose:4.2.2")
 
     //jetpack compose
-    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 
     implementation("androidx.compose.ui:ui:$compose_version")
     implementation("androidx.compose.ui:ui-viewbinding:$compose_version")
@@ -155,9 +158,7 @@ dependencies {
     //todo: check if all accompanist libs are needed
 
     //accompanist
-    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_version"
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
